--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "santa",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:31415",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -9,6 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
